feat: pets endpoints done & security configs changes